fix overflow

--- a/templates/css/main.styl
+++ b/templates/css/main.styl
@@ -15,6 +15,7 @@ body
   background: black url('../img/cover.jpg') center bottom no-repeat
   background-size: cover
   font-variant-ligatures: common-ligatures
+  overflow: hidden
   @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 640px), (min-resolution: 192dpi)
     background: url('../img/cover@2x.jpg') center bottom no-repeat
     background-size: cover
